# Skyjo

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
include/skyjo/: Action.h  Card.h  Deck.h  Experiment.h  Game.h  Player.h  Simulation.h  SpeedExperiment.h  State.h  Tournament.h
include/skyjo/agents/: Agent.h  BasicLogic.h  MinimaxAgent.h  MonteCarloAgent.h  RandomAgent.h
optimization/: ChangingVectorToArray.txt  LegalActionBitmask.txt  Original.txt  SetCopyingOnce.txt
src/: Card.cpp  Deck.cpp  Game.cpp  Player.cpp  State.cpp
src/agents/: BasicLogic.cpp  MinimaxAgent.cpp  MonteCarloAgent.cpp  RandomAgent.cpp
test-cases/: test_card.cpp  test_deck.cpp  test_game.cpp  test_player.cpp  test_state.cpp
tests/: Experiment.cpp  Simulation.cpp  SpeedExperiment.cpp  Tournament.cpp
